# cosmic-apis-spec

./: BUILD  README.md  WORKSPACE  build.py  customers.swagger.json  domainconfig.html  domainconfig.swagger.json  go.mod  go.sum  go_vendor.bzl  identities.swagger.json  identity.swagger.json  introducers.html  introducers.swagger.json
customers/client/: BUILD.bazel  customers_client.go
customers/client/customer_gateway/: BUILD.bazel  customer_gateway_add_company_parameters.go  customer_gateway_add_company_responses.go  customer_gateway_add_employment_parameters.go  customer_gateway_add_employment_responses.go  customer_gateway_add_ownership_parameters.go  customer_gateway_add_ownership_responses.go  customer_gateway_client.go  customer_gateway_create_download_document_link_parameters.go  customer_gateway_create_download_document_link_responses.go  customer_gateway_create_upload_document_link_parameters.go  customer_gateway_create_upload_document_link_responses.go  customer_gateway_delete_document_parameters.go  customer_gateway_delete_document_responses.go  customer_gateway_get_address_history_parameters.go  customer_gateway_get_address_history_responses.go  customer_gateway_get_application_parameters.go  customer_gateway_get_application_responses.go  customer_gateway_get_employment_parameters.go  customer_gateway_get_employment_responses.go  customer_gateway_get_notifications_parameters.go  customer_gateway_get_notifications_responses.go  customer_gateway_get_profile_parameters.go  customer_gateway_get_profile_responses.go  customer_gateway_get_summary_parameters.go  customer_gateway_get_summary_responses.go  customer_gateway_list_applications_parameters.go  customer_gateway_list_applications_responses.go  customer_gateway_list_companies_parameters.go  customer_gateway_list_companies_responses.go  customer_gateway_list_documents_parameters.go  customer_gateway_list_documents_responses.go  customer_gateway_list_employment_parameters.go  customer_gateway_list_employment_responses.go  customer_gateway_list_notification_preferences_parameters.go  customer_gateway_list_notification_preferences_responses.go  customer_gateway_list_ownerships_parameters.go  customer_gateway_list_ownerships_responses.go  customer_gateway_remove_employment_parameters.go  customer_gateway_remove_employment_responses.go  (+12 more)
customers/models/: BUILD.bazel  asset_bank_account.go  asset_generic.go  asset_other.go  asset_pension.go  asset_shares.go  bank_account_bank_account_type.go  company_trading_address.go  cosmicapisinternalwkt_money.go  customersv1_asset.go  generic_generic_type.go  googletype_money.go  internalwkt_company_type.go  internalwkt_date.go  internalwkt_marital_status.go  internalwkt_name_title.go  internalwkt_occupancy_type.go  other_asset_other_type.go  pension_pension_type.go  profile_custodial_sentence.go  v1_add_company_request.go  v1_add_company_response.go  v1_add_employment_request.go  v1_add_employment_response.go  v1_add_ownership_request.go  v1_add_ownership_response.go  v1_address_history.go  v1_application_summary.go  v1_asset_property.go  v1_asset_property_property_type.go  v1_company.go  v1_company_summary.go  v1_create_download_document_link_request.go  v1_create_download_document_link_response.go  v1_create_upload_document_link_request.go  v1_create_upload_document_link_response.go  v1_delete_document_response.go  v1_document.go  v1_document_collection.go  v1_document_collection_application_link.go  (+30 more)
domainconfig/client/domain_config/: BUILD.bazel  domain_config_client.go  resolve_parameters.go  resolve_responses.go
domainconfig/models/: BUILD.bazel
examples/get-domain-config/: BUILD.bazel  main.go
examples/get-introducer-details/: BUILD.bazel  main.go
identities/models/: BUILD.bazel  v1_account.go  v1_add_organisation_member_response.go  v1_create_account_request.go  v1_create_account_response.go  v1_create_organisation_request.go  v1_do_reset_password_request.go  v1_do_reset_password_response.go  v1_login_request.go  v1_login_response.go  v1_organisation.go  v1_query_organisations_response.go  v1_send_reset_password_request.go  v1_token_check_response.go  v1_token_renew_response.go  v1_update_account_details_request.go  v1_update_account_password_request.go  v1_update_organisation_request.go  v1_update_organisation_response.go
identity/client/: BUILD.bazel  identity_client.go
identity/client/identities/: BUILD.bazel  add_organisation_member_parameters.go  add_organisation_member_responses.go  create_account_parameters.go  create_account_responses.go  create_organisation_parameters.go  create_organisation_responses.go  do_reset_password_parameters.go  do_reset_password_responses.go  get_account_parameters.go  get_account_responses.go  get_organisation_parameters.go  get_organisation_responses.go  identities_add_organisation_member_parameters.go  identities_add_organisation_member_responses.go  identities_client.go  identities_create_account_parameters.go  identities_create_account_responses.go  identities_create_organisation_parameters.go  identities_create_organisation_responses.go  identities_do_reset_password_parameters.go  identities_do_reset_password_responses.go  identities_get_account_parameters.go  identities_get_account_responses.go  identities_get_organisation_parameters.go  identities_get_organisation_responses.go  identities_login_parameters.go  identities_login_responses.go  identities_query_account_memberships_parameters.go  identities_query_account_memberships_responses.go  identities_query_accounts_responses.go  identities_query_organisations_responses.go  identities_remove_organisation_member_parameters.go  identities_remove_organisation_member_responses.go  (+40 more)
introducers/client/: BUILD.bazel  introducers_client.go
introducers/models/: BUILD.bazel  internalwkt_address.go  internalwkt_pagination_response.go  v1_add_introducer_owner_request.go  v1_add_introducer_owner_response.go  v1_create_introducer_response.go  v1_get_introducer_response.go  v1_introducer.go  v1_update_introducer_address_request.go
pkg/auth/: BUILD.bazel  auth.go
(+96 files in other folders)
