load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "asset_bank_account.go",
        "asset_generic.go",
        "asset_other.go",
        "asset_pension.go",
        "asset_shares.go",
        "bank_account_bank_account_type.go",
        "company_trading_address.go",
        "cosmicapisinternalwkt_money.go",
        "customersv1_asset.go",
        "generic_generic_type.go",
        "googletype_money.go",
        "internalwkt_address.go",
        "internalwkt_company_type.go",
        "internalwkt_date.go",
        "internalwkt_marital_status.go",
        "internalwkt_name_title.go",
        "internalwkt_occupancy_type.go",
        "other_asset_other_type.go",
        "pension_pension_type.go",
        "profile_custodial_sentence.go",
        "protobuf_any.go",
        "runtime_error.go",
        "runtime_stream_error.go",
        "v1_add_company_request.go",
        "v1_add_company_response.go",
        "v1_add_employment_request.go",
        "v1_add_employment_response.go",
        "v1_add_ownership_request.go",
        "v1_add_ownership_response.go",
        "v1_address_history.go",
        "v1_application_summary.go",
        "v1_asset_property.go",
        "v1_asset_property_property_type.go",
        "v1_company.go",
        "v1_company_summary.go",
        "v1_create_download_document_link_request.go",
        "v1_create_download_document_link_response.go",
        "v1_create_upload_document_link_request.go",
        "v1_create_upload_document_link_response.go",
        "v1_delete_document_response.go",
        "v1_document.go",
        "v1_document_collection.go",
        "v1_document_collection_application_link.go",
        "v1_employment.go",
        "v1_employment_status.go",
        "v1_get_address_history_response.go",
        "v1_get_application_response.go",
        "v1_get_profile_response.go",
        "v1_get_summary_response.go",
        "v1_liability.go",
        "v1_list_applications_response.go",
        "v1_list_companies_response.go",
        "v1_list_documents_response.go",
        "v1_list_employment_response.go",
        "v1_list_notification_preferences_response.go",
        "v1_list_ownerships_response.go",
        "v1_notification.go",
        "v1_notification_preference.go",
        "v1_ownership.go",
        "v1_profile.go",
        "v1_remove_employment_response.go",
        "v1_remove_ownership_response.go",
        "v1_set_address_history_request.go",
        "v1_set_address_history_response.go",
        "v1_set_notification_preferences_request.go",
        "v1_set_notification_preferences_response.go",
        "v1_update_employment_request.go",
        "v1_update_employment_response.go",
        "v1_update_ownership_request.go",
        "v1_update_ownership_response.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/customers/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_go_openapi_validate//:go_default_library",
    ],
)
