load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "v1_domain_configuration.go",
        "v1_resolve_response.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/domainconfig/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
    ],
)
