load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "internalwkt_address.go",
        "internalwkt_pagination_request.go",
        "internalwkt_pagination_response.go",
        "protobuf_any.go",
        "query_account_memberships_response_map.go",
        "runtime_error.go",
        "v1_account.go",
        "v1_add_organisation_member_request.go",
        "v1_add_organisation_member_response.go",
        "v1_create_account_request.go",
        "v1_create_account_response.go",
        "v1_create_organisation_request.go",
        "v1_create_organisation_response.go",
        "v1_do_reset_password_request.go",
        "v1_do_reset_password_response.go",
        "v1_get_account_response.go",
        "v1_get_account_with_credentials_response.go",
        "v1_get_organisation_response.go",
        "v1_login_request.go",
        "v1_login_response.go",
        "v1_member_role.go",
        "v1_organisation.go",
        "v1_query_account_memberships_response.go",
        "v1_query_accounts_response.go",
        "v1_query_organisations_response.go",
        "v1_send_reset_password_request.go",
        "v1_send_reset_password_response.go",
        "v1_token_check_request.go",
        "v1_token_check_response.go",
        "v1_token_renew_request.go",
        "v1_token_renew_response.go",
        "v1_update_account_details_request.go",
        "v1_update_account_details_response.go",
        "v1_update_account_password_request.go",
        "v1_update_account_password_response.go",
        "v1_update_organisation_request.go",
        "v1_update_organisation_response.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/identities/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_go_openapi_validate//:go_default_library",
    ],
)
