load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["introducers_client.go"],
    importpath = "lwebco.de/cosmic-apis-spec/introducers/client",
    visibility = ["//visibility:public"],
    deps = [
        "//introducers/client/introducers:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
    ],
)
