load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["auth.go"],
    importpath = "lwebco.de/cosmic-apis-spec/pkg/auth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
    ],
)
