load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "customer_gateway_add_company_parameters.go",
        "customer_gateway_add_company_responses.go",
        "customer_gateway_add_employment_parameters.go",
        "customer_gateway_add_employment_responses.go",
        "customer_gateway_add_ownership_parameters.go",
        "customer_gateway_add_ownership_responses.go",
        "customer_gateway_client.go",
        "customer_gateway_create_download_document_link_parameters.go",
        "customer_gateway_create_download_document_link_responses.go",
        "customer_gateway_create_upload_document_link_parameters.go",
        "customer_gateway_create_upload_document_link_responses.go",
        "customer_gateway_delete_document_parameters.go",
        "customer_gateway_delete_document_responses.go",
        "customer_gateway_get_address_history_parameters.go",
        "customer_gateway_get_address_history_responses.go",
        "customer_gateway_get_application_parameters.go",
        "customer_gateway_get_application_responses.go",
        "customer_gateway_get_notifications_parameters.go",
        "customer_gateway_get_notifications_responses.go",
        "customer_gateway_get_profile_parameters.go",
        "customer_gateway_get_profile_responses.go",
        "customer_gateway_get_summary_parameters.go",
        "customer_gateway_get_summary_responses.go",
        "customer_gateway_list_applications_parameters.go",
        "customer_gateway_list_applications_responses.go",
        "customer_gateway_list_companies_parameters.go",
        "customer_gateway_list_companies_responses.go",
        "customer_gateway_list_documents_parameters.go",
        "customer_gateway_list_documents_responses.go",
        "customer_gateway_list_employment_parameters.go",
        "customer_gateway_list_employment_responses.go",
        "customer_gateway_list_notification_preferences_parameters.go",
        "customer_gateway_list_notification_preferences_responses.go",
        "customer_gateway_list_ownerships_parameters.go",
        "customer_gateway_list_ownerships_responses.go",
        "customer_gateway_remove_employment_parameters.go",
        "customer_gateway_remove_employment_responses.go",
        "customer_gateway_remove_ownership_parameters.go",
        "customer_gateway_remove_ownership_responses.go",
        "customer_gateway_set_address_history_parameters.go",
        "customer_gateway_set_address_history_responses.go",
        "customer_gateway_set_notification_preferences_parameters.go",
        "customer_gateway_set_notification_preferences_responses.go",
        "customer_gateway_update_employment_parameters.go",
        "customer_gateway_update_employment_responses.go",
        "customer_gateway_update_ownership_parameters.go",
        "customer_gateway_update_ownership_responses.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/customers/client/customer_gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//customers/models:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
    ],
)
