load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "domain_config_client.go",
        "resolve_parameters.go",
        "resolve_responses.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/domainconfig/client/domain_config",
    visibility = ["//visibility:public"],
    deps = [
        "//domainconfig/models:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
    ],
)
