load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_organisation_member_parameters.go",
        "add_organisation_member_responses.go",
        "create_account_parameters.go",
        "create_account_responses.go",
        "create_organisation_parameters.go",
        "create_organisation_responses.go",
        "get_account_parameters.go",
        "get_account_responses.go",
        "get_organisation_parameters.go",
        "get_organisation_responses.go",
        "identities_client.go",
        "login_parameters.go",
        "login_responses.go",
        "query_account_memberships_parameters.go",
        "query_account_memberships_responses.go",
        "query_accounts_parameters.go",
        "query_accounts_responses.go",
        "query_organisations_parameters.go",
        "query_organisations_responses.go",
        "remove_organisation_member_parameters.go",
        "remove_organisation_member_responses.go",
        "set_organisation_status_parameters.go",
        "set_organisation_status_responses.go",
        "token_check_parameters.go",
        "token_check_responses.go",
        "token_revoke_parameters.go",
        "token_revoke_responses.go",
        "update_account_details_parameters.go",
        "update_account_details_responses.go",
        "update_account_password_parameters.go",
        "update_account_password_responses.go",
        "update_organisation_parameters.go",
        "update_organisation_responses.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/identity/client/identities",
    visibility = ["//visibility:public"],
    deps = [
        "//identity/models:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
    ],
)
