load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "identities_add_organisation_member_parameters.go",
        "identities_add_organisation_member_responses.go",
        "identities_client.go",
        "identities_create_account_parameters.go",
        "identities_create_account_responses.go",
        "identities_create_organisation_parameters.go",
        "identities_create_organisation_responses.go",
        "identities_do_reset_password_parameters.go",
        "identities_do_reset_password_responses.go",
        "identities_get_account_parameters.go",
        "identities_get_account_responses.go",
        "identities_get_organisation_parameters.go",
        "identities_get_organisation_responses.go",
        "identities_login_parameters.go",
        "identities_login_responses.go",
        "identities_query_account_memberships_parameters.go",
        "identities_query_account_memberships_responses.go",
        "identities_query_accounts_parameters.go",
        "identities_query_accounts_responses.go",
        "identities_query_organisations_parameters.go",
        "identities_query_organisations_responses.go",
        "identities_remove_organisation_member_parameters.go",
        "identities_remove_organisation_member_responses.go",
        "identities_send_reset_password_parameters.go",
        "identities_send_reset_password_responses.go",
        "identities_set_organisation_status_parameters.go",
        "identities_set_organisation_status_responses.go",
        "identities_token_check_parameters.go",
        "identities_token_check_responses.go",
        "identities_token_renew_parameters.go",
        "identities_token_renew_responses.go",
        "identities_update_account_details_parameters.go",
        "identities_update_account_details_responses.go",
        "identities_update_account_password_parameters.go",
        "identities_update_account_password_responses.go",
        "identities_update_organisation_parameters.go",
        "identities_update_organisation_responses.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/identity/client/identities",
    visibility = ["//visibility:public"],
    deps = [
        "//identity/models:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
    ],
)
