load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_introducer_owner_parameters.go",
        "add_introducer_owner_responses.go",
        "create_introducer_parameters.go",
        "create_introducer_responses.go",
        "get_introducer_parameters.go",
        "get_introducer_responses.go",
        "get_introducers_parameters.go",
        "get_introducers_responses.go",
        "introducers_client.go",
        "remove_introducer_owner_parameters.go",
        "remove_introducer_owner_responses.go",
        "update_introducer_address_parameters.go",
        "update_introducer_address_responses.go",
    ],
    importpath = "lwebco.de/cosmic-apis-spec/introducers/client/introducers",
    visibility = ["//visibility:public"],
    deps = [
        "//introducers/models:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
    ],
)
